# jac

./: .gitignore  CMakeLists.txt  README.md
include/jac/: holder.hpp  macros.hpp  maybe_uninit.hpp  option.hpp  result.hpp  types.hpp  utils.hpp
tests/: CMakeLists.txt  example.cpp  holder.cpp
